--- a/style/oldtimey.css
+++ b/style/oldtimey.css
@@ -1,64 +1,23 @@
-html {
-	margin:0;
-	background-color: rgb(86, 91, 139);
-}
-
 body { 
-	margin: 0;
-	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
-	text-align: center;
-	color: black; 
-	line-height: 125%; 
-	font-size: 20px;
-}
-
-.back1, .back2, .back3, .back4, .back5 {
-	overflow: auto;
-	max-width: 800px;
-	margin-left: auto;
-	margin-right: auto;
-	border-left: 3px solid white;
-	border-right: 3px solid white;
-}
-
-.back1 {
-   background-color: rgb(162, 207, 165);
-}
-
-.back2 {
-   background-color: rgb(224, 231, 171);
-}
-
-.back3 {
-   background-color: rgb(245,151,78);
-}
-
-.back4 {
-   background-color: rgb(233,107,86);
-   padding-bottom: 0px;
-}
-
-.back5 {
-   background-color: rgb(210,67,68);
-}
-
-/* highlight color changes part-way down the page */
-
-.back4 h2, .back5 h2, .back4 h3, .back5 h3 {
-	color: rgb(190, 192, 235);
+    font: 34px 'Pompiere', Arial,Helvetica,sans-serif;
+    text-align:center;
+    height: 100%;
+    color: #FFE5A1;
+    background: rgb(131, 64, 42) url(pattern.png);
 }
 
 .navlist {
     display: inline-block;
     width: 22%;
     text-align: center;
-    font-size: 1.2em;
+    text-decoration: none;
 }
 
 .threelist {
     display: inline-block;
     width: 32%;
     text-align: center;
+    text-decoration: none;
 }
 
 .smallprint {
@@ -68,18 +27,13 @@ body {
 .portrait {
 	width: 128px;
 	height: 128px;
-	border: 3px solid white;
+	border: 3px solid #FFE5A1;
 	border-radius: 64px;
 }
 
 a {
-	color: white;
-	text-decoration: none;
+	color: #FFE5A1;
 	}
-
-a:hover {
-	text-decoration: underline;
-}
 
 p {
 	margin-top: 20px;
@@ -87,28 +41,21 @@ p {
 	}
 
 h1 {
-   font-size: 80px; font-weight: normal; 
+   font-family: 'Pompiere', cursive, sans-serif; 
+   font-size: 88px; font-weight: normal; 
    line-height: 110%; 
-   margin-top:10px;
-   margin-bottom:10px;
+   margin-top:35px;
+   margin-bottom:35px;
    margin-left: auto;
    margin-right: auto;
-   color: white;
 }
 
-h2 { 
-   font-weight: bold; 
-   font-size: 30px; 
-   line-height: 125%; 
-
-   margin-top: 20px;
-   margin-bottom: 10px; 
-   color: rgb(210, 67, 68);
+h2 {
+	font: 60px 'Pompiere', cursive, sans-serif;
 }
 
 h3 {
-	font-size: 30px;
-	margin-bottom: 15px;
+	font: 50px 'Pompiere', cursive, sans-serif;
 }
 
 .pressrelease {
@@ -120,11 +67,6 @@ h3 {
 ul {
 	text-align: left;
 	font-size: 26px;
-	color: rgb(190, 192, 235);
-}
-
-li {
-	margin-top: 7px;
 }
 
 .dense-text {
@@ -140,6 +82,10 @@ li {
 	margin-bottom: 15px;
 	}
 
+.logo a {
+	text-decoration: none;
+	}
+
 .presents {
 	font-size: 30px;
 	margin-top: 10px;
@@ -153,9 +99,10 @@ li {
 .section {
 	margin: auto;
 	padding: 0px;
-	max-width: 750px;
+	max-width: 800px;
 
 	margin-top: 0px;
+	border-top: 3px solid;
 	padding-top: 0px;
 
 	padding-bottom: 0px;
@@ -163,6 +110,7 @@ li {
 	}
 
 .section:last-of-type {
+	border-bottom: 3px solid;
 	margin-bottom: 17px;
 	}
 
@@ -189,7 +137,7 @@ li {
 .framed {
 	margin: 12px;
 	margin-bottom: 18px;
-	border: 4px solid white;
+	border: 1px solid #BA885C;
 	max-width: 500px;
 	}
 
@@ -199,15 +147,16 @@ li {
 	/*inherited from .framed*/
 	margin: 12px;
 	margin-bottom: 18px;
-	border: 2px solid white;
+	border: 1px solid #BA885C;
 }
 
 form {
-	border: 2px solid white;
-	background-color: rgb(162, 207, 165);
+	border: 2px solid #BA885C;
+	background: rgb(131, 64, 42) url(pattern2.png);
 	max-width: 400px;
 	margin: auto;
 	padding: 20px;
+	color: white;
 }
 
 input {
@@ -220,34 +169,41 @@ input[type=checkbox] {
 }
 
 input[type=checkbox] + label:before {
-	color: rgba(100,100,100, 0);
+	color: #fb9e25;
 	content: "\2063  ";
+	text-shadow: 1px 1px 1px #cc9f52;
 	text-align: center;
 	margin-right: 15px;
-	width: 14px;
-	padding-right:10px;
-	height: 24px;
+	width: 20px;
 
-	border: 2px solid black;
+	box-shadow:inset 0px 1px 0px 0px #fce2c1;
+	background-color:#fb9e25;
+	border-radius:6px;
+	border:1px solid #eeb44f;
 	display:inline-block;
 	font-size:22px;
-	
+	padding:3px 12px;
+	text-shadow:0px 1px 0px #cc9f52;
 }
 
 input[type=checkbox]:checked + label:before {
-	color: black;
+	color: white;
 	content: "\2713  ";
+	width: 20px;
+	text-shadow: 1px 1px 1px #cc9f52;
 	text-align: center;
 }
 
 input[type=submit] {
-	color: black;
-	background-color: rgb(245,151,78);
-	border: 2px solid white;
+	box-shadow:inset 0px 1px 0px 0px #fce2c1;
+	background-color:#fb9e25;
+	border-radius:6px;
+	border:1px solid #eeb44f;
 	display:inline-block;
 	cursor:pointer;
 	font-size:22px;
 	padding:3px 12px;
+	text-shadow:0px 1px 0px #cc9f52;
 }
 
 label {
