--- a/style/arcade.css
+++ b/style/arcade.css
@@ -51,8 +51,11 @@ body {
 .navlist {
     display: inline-block;
     width: 22%;
+    min-width: 138px;
     text-align: center;
     font-size: 1.2em;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .threelist {
@@ -70,6 +73,7 @@ body {
 	height: 128px;
 	border: 3px solid white;
 	border-radius: 64px;
+	margin-bottom: 15px;
 }
 
 a {
@@ -83,14 +87,19 @@ a:hover {
 
 p {
 	margin-top: 20px;
-	margin-bottom: 22px;
-	}
+	margin-bottom: 20px;
+}
+
+.subheading {
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
 
 h1 {
-   font-size: 80px; font-weight: normal; 
+   font-size: 50px; font-weight: normal; 
    line-height: 110%; 
-   margin-top:10px;
-   margin-bottom:10px;
+   margin-top: 50px;
+   margin-bottom: 50px;
    margin-left: auto;
    margin-right: auto;
    color: white;
@@ -98,11 +107,11 @@ h1 {
 
 h2 { 
    font-weight: bold; 
-   font-size: 30px; 
+   font-size: 40px; 
    line-height: 125%; 
 
-   margin-top: 20px;
-   margin-bottom: 10px; 
+   margin-top: 40px;
+   margin-bottom: 40px; 
    color: rgb(210, 67, 68);
 }
 
