full width colour sections

--- a/style/arcade.css
+++ b/style/arcade.css
@@ -13,15 +13,17 @@ body {
 }
 
 .back1, .back2, .back3, .back4, .back5 {
+	width: 100%;
+	padding-bottom: 25px;
+}
+
+.container {
 	overflow: auto;
 	max-width: 720px;
 	margin-left: auto;
 	margin-right: auto;
-	border-left: 3px solid white;
-	border-right: 3px solid white;
 	padding-left: 40px;
 	padding-right: 40px;
-	padding-bottom: 25px;
 }
 
 .back1 {
