--- a/style/arcade.css
+++ b/style/arcade.css
@@ -58,11 +58,6 @@ body {
 	color: rgb(210, 67, 68);
 }
 
-/* and lists */
-.back2 ul {
-	color: #F5974E;
-}
-
 .navlist {
     display: inline-block;
     width: 22%;
@@ -92,7 +87,7 @@ body {
 }
 
 a {
-	color: white;
+	color: rgba(255, 255, 255, 0.8);
 	text-decoration: underline;
 	}
 
@@ -108,6 +103,13 @@ p {
 .subheading {
 	margin-top: 30px;
 	margin-bottom: 30px;
+	font-size: 1.2em;
+}
+
+.sitetitle {
+	font-size: 90px;
+	margin-top: 100px;
+	margin-bottom: 50px;
 }
 
 h1 {
@@ -117,7 +119,7 @@ h1 {
    margin-bottom: 50px;
    margin-left: auto;
    margin-right: auto;
-   color: white;
+   color: rgba(255, 255, 255, 0.7);
 }
 
 h2 { 
@@ -135,6 +137,10 @@ h3 {
 	margin-bottom: 15px;
 }
 
+h1, h2, .subheading, b, .navlist, input[type=submit] {
+	font-family: "Special Elite";
+}
+
 .pressrelease {
 	text-align: left;
 	font-family: 'Times New Roman';
@@ -144,7 +150,7 @@ h3 {
 ul {
 	text-align: left;
 	font-size: 26px;
-	color: rgb(190, 192, 235);
+	color: rgb(46, 48, 77);
 }
 
 li {
@@ -258,7 +264,7 @@ input[type=checkbox] + label:before {
 
 	border: 2px solid black;
 	display:inline-block;
-	font-size:22px;
+	font-size:30px;
 	
 }
 
@@ -266,6 +272,7 @@ input[type=checkbox]:checked + label:before {
 	color: black;
 	content: "\2713  ";
 	text-align: center;
+	font-size:30px;
 }
 
 input[type=submit] {
@@ -275,7 +282,11 @@ input[type=submit] {
 	display:inline-block;
 	cursor:pointer;
 	font-size:22px;
-	padding:3px 12px;
+	line-height: 1em;
+	padding-top: 10px;
+	padding-bottom: 3px;
+	padding-left: 12px;
+	padding-right: 12px;
 }
 
 label {
