--- a/style/arcade.css
+++ b/style/arcade.css
@@ -61,6 +61,10 @@ body {
 	color: rgb(210, 67, 68);
 }
 
+.back2 a:hover {
+	color: rgba(37, 26, 197, 0.8);
+}
+
 .navlist {
     display: inline-block;
     width: 22%;
@@ -69,6 +73,13 @@ body {
     font-size: 1.2em;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+.third {
+	width:33.3333333%;
+	display: block;
+	float: left;
+	box-sizing: border-box;
 }
 
 .threelist {
@@ -82,11 +93,15 @@ body {
 }
 
 .portrait {
-	width: 128px;
-	height: 128px;
+	width: 180px;
+	height: 180px;
 	border: 3px solid rgba(255, 255, 255, 0.4);
-	border-radius: 64px;
+	border-radius: 50%;
 	margin-bottom: 15px;
+}
+
+.portrait-caption {
+	margin-bottom: 20px;
 }
 
 a {
@@ -95,7 +110,7 @@ a {
 	}
 
 a:hover {
-	text-decoration: underline;
+	color: rgba(255, 255, 0, 0.8);
 }
 
 p {
