--- a/style/arcade.css
+++ b/style/arcade.css
@@ -329,3 +329,30 @@ label {
 	margin-bottom: 0px;
 	margin-top: 64px;
 }
+
+.fullscreenbackground {
+	text-align: center;
+	visibility:hidden;
+	opacity:0;
+	transition:visibility 0s linear 0.5s,opacity 0.5s linear;
+	position: fixed;
+	z-index: 100;
+	top: -20%; left: -20%; width: 140%; height: 140%;
+	background-color: rgba(0,0,0, 0.9);	
+}
+
+.fullscreenbackground.show {
+  visibility:visible;
+  opacity:1;
+  transition-delay:0s;	
+}
+
+.fullscreenpic {
+	position: fixed;
+	top: 30%;
+	left: 50%;
+	max-height: 100%;
+	transform: translate(-50%, -50%);
+
+	border: 4px solid white;
+}
