--- a/style/arcade.css
+++ b/style/arcade.css
@@ -75,6 +75,13 @@ body {
     margin-bottom: 20px;
 }
 
+.half {
+	width: calc(50% - 24px);
+	display: block;
+	float: left;
+	box-sizing: border-box;
+}
+
 .third {
 	width:33.3333333%;
 	display: block;
@@ -159,7 +166,7 @@ h3 {
 	margin-bottom: 15px;
 }
 
-h1, h2, .subheading, b, .navlist, input[type=submit] {
+h1, h2, .subheading, b, .navlist, input[type=submit], .warning {
 	font-family: "Special Elite";
 }
 
@@ -222,7 +229,7 @@ li {
 	margin: 12px;
 	margin-bottom: 18px;
 	border: 4px solid white;
-	max-width: 500px;
+	max-width: calc(100% - 32px);
 	}
 
 /* place under a .framed img */
@@ -349,10 +356,28 @@ label {
 
 .fullscreenpic {
 	position: fixed;
-	top: 30%;
+	top: 50%;
 	left: 50%;
-	max-height: 100%;
+	max-height: 90%;
 	transform: translate(-50%, -50%);
-
 	border: 4px solid white;
+}
+
+.warning {
+	padding-top: 48px;
+	padding-bottom: 16px;
+	background-color: rgb(46, 48, 77);
+	color: rgba(255, 255, 255, 0.8);
+	font-size: 1.5em;
+	border-bottom: 4px dashed rgba(0,0,0,0);
+	box-shadow: 0  0 1em black;
+	z-index: 100;
+	position: relative;
+	transform: rotate(-0.4deg);
+	margin-bottom: -10px;
+	margin-top: -16px;
+}
+
+.warning a:hover {
+	color: rgb(210, 67, 68);
 }
