--- a/style/arcade.css
+++ b/style/arcade.css
@@ -135,8 +135,12 @@ p {
 	font-size: 90px;
 	margin-top: 100px;
 	margin-bottom: 50px;
-	transform: rotate(-2deg);
 }
+
+.o7 { opacity: 0.7; }
+.o5 { opacity: 0.5; }
+.o3 { opacity: 0.3; }
+.o1 { opacity: 0.1; }
 
 h2, h3 {
 	color: rgb(46, 48, 77);
