--- a/style/arcade.css
+++ b/style/arcade.css
@@ -363,6 +363,7 @@ label {
 	top: 50%;
 	left: 50%;
 	max-height: 90%;
+	max-width: 90%;
 	transform: translate(-50%, -50%);
 	border: 4px solid white;
 }
